docker_kubernetes/post-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-db-deployment
  labels:
    app: post-db
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: post-db
  template:
    metadata:
      labels:
        app: post-db      
    spec:
      containers:
        - name: post-db
          image: postgres
          ports: 
          - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: post-db-service
spec:
  selector:
    app: post-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
