docker_kubernetes/postservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-service-deployment
  labels:
    app: post-service
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: post-service
  template:
    metadata:
      labels:
        app: post-service       
    spec:
      containers:
        - name: post-service
          image: ghcr.io/aleksandrakrasteva/post-service:dev
          imagePullPolicy: Always
          ports: 
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: post-service-service
spec:
  selector:
    app: post-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
