docker_kubernetes/user-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-db-service
spec:
  selector:
    app: user-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: user-db-set
spec:
  selector:
    matchLabels:
      app: user-db 
  serviceName: "user-db-service"
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: user-db 
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: user-db
          image: postgres
          ports: 
          - containerPort: 5432
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
             - mountPath: "/volumes/user/data"
               name: storage
      volumes:
         - name: storage
           persistentVolumeClaim:
            claimName: user-db-pvc
