docker_kubernetes/http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-routes
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "skipass.api"
  rules:
    - backendRefs:
        - kind: Service
          namespace: default
          name: user-service-service
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /get-users
        - path:
            type: PathPrefix
            value: /create-user
        - path:
            type: PathPrefix
            value: /delete-profile/
    - backendRefs:
        - kind: Service
          namespace: default
          name: post-service-service
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /create-post
        - path:
            type: PathPrefix
            value: /view
        - path:
            type: PathPrefix
            value: /delete-post
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: cors
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: http-routes
  cors:
    allowOrigins:
    - "http://localhost:3000"
    allowMethods:
    - GET
    - POST
    - DELETE
    allowHeaders:
    - "*"
    exposeHeaders:
    - "*"
